--- a/chat3.html
+++ b/chat3.html
@@ -28,7 +28,7 @@
         </a>
       </div>
       <div class="alt-header__column">
-        <h1 class="alt-header__title">나대용</h1>
+        <h1 class="alt-header__title">왜군</h1>
       </div>
       <div class="alt-header__column">
         <span><i class="fas fa-search fa-lg"></i></span>
@@ -57,7 +57,7 @@
          <div class="message-row__content"> 
           <span class="message__author">와키자카 사효에</span>
             <div class="message__info">
-              <span class="message__bubble"> 제가 메구라부네의 🐢 도면을 훔쳤습니다. 이 배는 느려요 </span>
+              <span class="message__bubble"> 제가 메구라부네의 도면을 훔쳤습니다. 이 배는 장님 배...🐢 빠를 수가 없습니다. </span>
               <span class="message__time">06:00</span>
             </div>
          </div>
@@ -81,7 +81,7 @@
          <div class="message-row__content"> 
           <span class="message__author">와키자카 야스하루</span>
             <div class="message__info">
-              <span class="message__bubble">나의 조카 사효에... 복카이센!!!</span>
+              <span class="message__bubble">나의 조카 사효에...ㅠ 복카이센!!!</span>
               <span class="message__time">18:10</span>
             </div>
          </div>
