--- a/chats.html
+++ b/chats.html
@@ -89,9 +89,9 @@
               class="user-component__avatar user-component__avatar--xs"
             />
             <div class="user-component__text">
-              <h4 class="user-component__title">왜군 2</h4>
-              <h6 class="user-component__subtitle">
-                복카이센... 
+              <h4 class="user-component__title2">  왜군 2</h4>
+              <h6 class="user-component__subtitle2">
+                  복카이센... 
               </h6>
             </div>
           </div>
