--- a/chats.html
+++ b/chats.html
@@ -89,7 +89,8 @@
               class="user-component__avatar user-component__avatar--xs"
             />
             <div class="user-component__text">
-              <h4 class="user-component__title2">  왜군 2</h4>
+              <h4 class="user-component__title2">왜군</h4>
+              <h5 class="user-component__title3"> 2</h5>
               <h6 class="user-component__subtitle2">
                   복카이센... 
               </h6>
