--- a/chat3.html
+++ b/chat3.html
@@ -76,7 +76,7 @@
             </div>
          </div>
       </div>
-      <div class="message-row message--own">
+      <div class="message-row message-row--own">
             <div class="message__info">
               <span class="message__bubble"> 전군 출정하라... 발포하라! </span>
               <span class="message__time">16:30</span>
@@ -89,7 +89,7 @@
           <span class="message__author">와키자카 야스하루</span>
             <div class="message__info">
               <span class="message__bubble">나의 조카 사효에...ㅠ 복카이센이로구나!</span>
-              <span class="message__time">18:10</span>
+              <span class="message__time">17:35</span>
             </div>
          </div>
       </div>
