--- a/find.html
+++ b/find.html
@@ -49,7 +49,7 @@
         <div class="open-post">
           <div class="open-post__column">
             <h5 class="open-post__title">#한산</h5>
-            <h6 class="open-post__hashtags">#용의출현 #이순신장군 #구선</h6>
+            <h6 class="open-post__hashtags">#국뽕 #용의출현 #이순신장군 #거북선</h6>
             <div class="open-post__members">
               <img src="./css/hansan.jpeg" />
               <span class="open-post__member-count">802 members</span>
@@ -77,7 +77,7 @@
         </li>
         <li class="nav__btn">
           <a class="nav__link" href="chats.html">
-            <span class="nav__notification badge">1</span>
+            <span class="nav__notification badge">4</span>
             <i class="far fa-comment fa-2x"></i>
           </a>
         </li>
