--- a/chat3.html
+++ b/chat3.html
@@ -45,7 +45,7 @@
          <div class="message-row__content"> 
           <span class="message__author">와키자카 야스하루</span>
             <div class="message__info">
-              <span class="message__bubble"> 복카이센?🐢 아니다. 메구라부네, 장님 배야. 두려움은 전염병이다.</span>
+              <span class="message__bubble">복카이센? 두려움은 전엽병이다.</span>
               <span class="message__time">06:00</span>
             </div>
          </div>
