--- a/chat3.html
+++ b/chat3.html
@@ -53,17 +53,16 @@
        <div class="chat__timestamp">
         Saturday, August 6, 2022
       </div>
-      <div class="message-row">
+        <div class="message-row">
         <img src="./css/japan.jpeg">
          <div class="message-row__content"> 
           <span class="message__author">와키자카 야스하루</span>
             <div class="message__info">
-              <span class="message__bubble">학이 날개도 못펴고, 결국엔 잡아 먹히는구나 하하</span>
-              <span class="message__time">14:10</span>
+              <span class="message__bubble">학이 날개도 못펴고, 결국엔 잡아먹히는구나 😀 </span>
+              <span class="message__time">14:07</span>
             </div>
          </div>
       </div>
-      
       <div class="message-row message-row--own">
           <div class="message-row__content">
             <div class="message__info">
