--- a/chat3.html
+++ b/chat3.html
@@ -53,14 +53,22 @@
        <div class="chat__timestamp">
         Saturday, August 6, 2022
        </div>
-       
+
+        <div class="message-row message-row--own">
+          <div class="message-row__content">
+            <div class="message__info">
+              <span class="message__bubble"> 전군 승선하라...</span>
+              <span class="message__time">14:00</span>
+            </div>
+          </div>
+      </div>
       <div class="message-row">
         <img src="./css/japan.jpeg">
          <div class="message-row__content"> 
           <span class="message__author">와키자카 야스하루</span>
             <div class="message__info">
               <span class="message__bubble">학이 날개도 못펴고, 결국엔 잡아먹히는구나 하하하😀 </span>
-              <span class="message__time">14:07</span>
+              <span class="message__time">14:29</span>
             </div>
          </div>
       </div>
@@ -68,7 +76,7 @@
       <div class="message-row message-row--own">
           <div class="message-row__content">
             <div class="message__info">
-              <span class="message__bubble"> 전군 승선하라... 발포하라</span>
+              <span class="message__bubble">발포하라</span>
               <span class="message__time">16:20</span>
             </div>
           </div>
