--- a/more.html
+++ b/more.html
@@ -38,7 +38,7 @@
             class="user-component__avatar user-component__avatar--xl"/>
             <div class="user-component__text">
               <h4 class="user-component__title">이순신</h4>
-              <h6 class="user-component__subtitle">조선의 장군</h6>
+              <h6 class="user-component__subtitle">조선 바다의 수호신</h6>
             </div>
           </div>
           <div class="user-component__column">
@@ -68,15 +68,16 @@
         <div class="more-suggestions">
           <h4 class="more-suggestions__title">Suggestions</h4>
           <div class="more-suggestions__icons">
-              <div class="more-suggestions__icon">
-                <div class="more-suggestions__icon-image">
-                  <i class="fas fa-quote-right"></i></div>
-                  <span class="more-suggestions__icon-text">Peach Story</span>
-                </div>
-              <div class="more-suggestions__icon">
+             <div class="more-suggestions__icon">
                 <div class="more-suggestions__icon-image"><i class="fa-solid fa-gamepad"></i></div>
                 <span class="more-suggestions__icon-text">Peach Games</span>
-            </div>
+             </div>  
+             <div class="more-suggestions__icon">
+                <div class="more-suggestions__icon-image">
+                  <i class="fa-solid fa-bag-shopping"></i></div>
+                  <span class="more-suggestions__icon-text">Peach Shop</span>
+             </div>
+             
           </div>
         </div>
       </main>
