--- a/chats.html
+++ b/chats.html
@@ -41,7 +41,7 @@
             <div class="user-component__text">
               <h4 class="user-component__title">준사</h4>
               <h6 class="user-component__subtitle">
-                이 전쟁은 무엇입니까...?
+                저를 거두어 주십시오.
               </h6>
             </div>
           </div>
@@ -64,7 +64,7 @@
             <div class="user-component__text">
               <h4 class="user-component__title">나대용</h4>
               <h6 class="user-component__subtitle">
-                충분히 이긴 것 같습니다.
+                충분히 이긴 것 같습니다, 장군
               </h6>
             </div>
           </div>
