--- a/chat3.html
+++ b/chat3.html
@@ -59,7 +59,7 @@
          <div class="message-row__content"> 
           <span class="message__author">와키자카</span>
             <div class="message__info">
-              <span class="message__bubble">학이 날개도 못펴고, 결국엔 잡아먹히는구나...하하하 (썩소)</span>
+              <span class="message__bubble">학이 날개도 못펴고, 결국엔 잡아먹히는구나...하하하</span>
               <span class="message__time">13:27</span>
             </div>
          </div>
